--- a/tex/report_template.tex
+++ b/tex/report_template.tex
@@ -32,7 +32,7 @@
 
 \noindent
 % Put name and c-number of first member
-\textbf{Name/C-number:Raoul Schikora/????}  \\
+\textbf{Name/C-number:Raoul Schikora/csav8467}  \\
 \textbf{Name/C-number:Oliver Roß/csaq8749}  \\
 
 \section{Answers}
